# ruya

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  image.cpp  main.cpp  main.py  ruya
python/: main.py
ruya/ruya/: main.cpp
ruya/ruya.xcodeproj/: project.pbxproj
ruya/ruya.xcodeproj/project.xcworkspace/xcuserdata/sharbster.xcuserdatad/: UserInterfaceState.xcuserstate
ruya/ruya.xcodeproj/xcuserdata/sharbster.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ruya/ruya.xcodeproj/xcuserdata/sharbster.xcuserdatad/xcschemes/: xcschememanagement.plist
